# ProjectQA

./: .env.example  .gitignore  README.md  SECURITY.md  agent-creation-workflow1.md  agent.py  config.py  package.json  playwright.config.ts  pyproject.toml  requirements.txt
.git-hooks/: pre-commit
agents/: agent_1_validate_requirement.py  agent_2_create_testcase.py  agent_3_execute_testcase.py  agent_4_uat_signoff.py  approval_gate.py  qa_workflow.py
dashboard/: index.html
scripts/: security_scan.py  setup.ps1  setup.sh
skills/: base_agent.py  connect_skill.py  email_skill.py  security_skill.py
tests/: example.spec.ts
tools/: confluence.py  jira.py  monday.py  playwright_tool.py  vansah.py
